src/components/Post/Post.module.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/mixins';

.post {
  &__tags {
    max-width: $layout-post-width;
    margin: 0 auto;
    box-sizing: border-box;
  }

  &__comments {
    max-width: $layout-post-width;
    margin: 0 auto;
    padding: 0 15px;
  }

  &__home-button,
  &__home-button-float {
    color: $color-white-almost;
    font-family: $typographic-font-basic;
    display: block;
    text-align: center;
    font-size: 20px;
    font-weight: normal;
    margin-left: auto;
    margin-right: auto;
    @include margin-top(1);
    transition: text-shadow 100ms;
    z-index: 10;

    &:hover,
    &:focus {
      color: $color-white-almost;
      text-decoration: none !important;
      text-shadow: 10px 10px 10px black;
    }
  }

  &__top {
    position: fixed;
    margin: 0;
    background-color: $color-gray-dark;
    color: $color-pink-light;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    transition: opacity 100ms;
    cursor: pointer;
    z-index: 10;
  }

  &__subscribe {
    margin: 2rem auto;
    max-width: $layout-post-width;
    display: flex;
    justify-content: center;

    > * {
      width: 80%;
    }
  }

  &__footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    max-width: $layout-post-width;
    border-top: 1px solid $color-yellow;

    &-contacts {
      margin-top: 7px;
      width: 150px;
    }

    &-right {
      margin: 15px 5px 10px;
      display: flex;
      align-items: center;
      padding-bottom: 10px;
      max-width: 375px;

      &-details {
        display: flex;
        flex-direction: column;
        align-items: center;

        &-home {
          font-family: $typographic-font-basic;
          color: $color-white-almost;
          font-size: 23px;
          transition: text-shadow 100ms;

          &:hover,
          &:focus {
            color: $color-white-almost;
            text-decoration: none !important;
            text-shadow: 10px 10px 10px black;
          }
        }

        &-tagline {
          font-family: $typographic-font-mono;
          color: $color-white-almost;
          font-size: 15px;
          line-height: normal;
          width: fit-content;
        }
      }

      img {
        border-radius: 200px;
        margin-right: 10px;
        box-shadow: 5px 5px 5px black;
      }
    }
  }

  &__copyright {
    border-top: 1px solid $color-yellow;
    max-width: $layout-post-width;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    padding-bottom: 75px;

    &-contacts {
      margin-top: 10px;
      width: 150px;
    }
  }
}

@include breakpoint-md {
  .post {
    &__comments {
      padding: 0;
    }

    &__home-button {
      position: fixed;
      margin: 0;
      top: 30px;
      left: 30px;

      &-float {
        display: none;
      }
    }

    &__top {
      bottom: 50px;
      right: calc((100vw - 945px) / 2 + 50px);
      opacity: 1 !important;

      svg {
        transition: transform 100ms;
        height: 40px;
        width: 40px;
      }

      &:hover {
        .shadow {
          -webkit-filter: drop-shadow(5px 5px 3px black);
          filter: drop-shadow(5px 5px 3px black);
        }

        svg {
          transform: scale(1.2);
        }
      }
    }
  }
}

@media screen and (max-width: $layout-breakpoint-sm) {
  .post {
    &__footer {
      justify-content: center;

      &-right {
        width: 100%;
        justify-content: space-around;
      }

      &-contacts {
        display: none;
      }
    }

    &__copyright-container,
    &__footer {
      margin: 0 1.25rem;
    }
  }
}

@media screen and (max-width: $layout-breakpoint-md) {
  .post {
    &__top {
      bottom: 20px;
      right: 20px;
      height: 40px;
      width: 40px;
      box-shadow: 5px 5px 5px black;
      border: 1px $color-white-almost solid;

      svg {
        height: 35px;
        width: 35px;
      }
    }

    &__home-button-float {
      position: fixed;
      margin: 0;
      top: 20px;
      left: 50%;
      transform: translateX(-50%);
      box-shadow: 5px 5px 5px black;
      border-radius: 50px;
      background-color: $color-gray-dark;
      transition: opacity 100ms;
      padding: 5px 15px;
      display: flex;
      align-items: center;
      justify-content: center;
      border: 1px $color-white-almost solid;
    }
  }
}

@include breakpoint-sm {
  .post {
    &__copyright-contacts {
      display: none;
    }

    &__footer-right-details {
      padding-left: 20px;
    }
  }
}

